sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:19: error: ')' expected but ',' found.
    for(i<-getNombreValeurs()-n,0){
                               ^AlgCocktailSort1:27: error: illegal start of simple expression
  }
  ^