sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {

  var n=2
  var sorted=false

  while (sorted!=true){ 
    sorted = true
    for (i<-0 to getNombreValeurs()-n){
      if (!plusPetit(i,i+1)){
        sorted=false
        echange(i,i+1)



      }

    }
    for(i<-getNombreValeurs()-n,0){
      if (!plusPetit(i,i+1)){
        sorted=false
        echange(i,i+1)}
      n=n+1
    }


  }
}